crates/parser/src/snapshots/parser__tests__ok_test@0055_compound_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(a b c)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0055_compound_pat.ath
---
COMPOUND_PAT
  L_PAREN "("
  IDENT_PAT
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "b"
      WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "c"
  R_PAREN ")"
  WHITESPACE "\n"

