crates/parser/src/snapshots/parser__tests__ok_test@0059_bang_method_call_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0059_bang_method_call_ded.ath
---
BANG_METHOD_CALL_DED
  L_PAREN "("
  BANG "!"
  IDENT_EXPR
    IDENTIFIER
      IDENT "claim"
      WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "A"
  R_PAREN ")"
  WHITESPACE "\n"

