crates/parser/src/snapshots/parser__tests__ok_test@0066_simple_try_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "try {  (!claim A) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0066_simple_try_ded.ath
---
TRY_DED
  TRY_KW "try"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "  "
  TRY_DED_ARM
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

