crates/parser/src/snapshots/parser__tests__ok_test@0069_pick_any_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-any a : Int (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0069_pick_any_ded.ath
---
PICK_ANY_DED
  PICK_ANY_KW "pick-any"
  WHITESPACE " "
  IDENTIFIER
    IDENT "a"
    WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      IDENTIFIER
        IDENT "claim"
        WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "A"
    R_PAREN ")"
    WHITESPACE "\n"

